add front hook for the theme business object
